# geometric_calculus

./: .gitignore  README.md  license.txt  pyproject.toml
continuous/: domain.py  field.py  geometry.py  models.py  optimize.py  readme.md
continuous/test/: test_dirac.py  test_direct_eigen.py  test_domain.py  test_elasticity.py  test_field.py  test_form.py  test_maxwell.py  test_models.py  test_poisson.py  test_stokes.py  test_wave.py
discrete/: field.py  field_slice.py  readme.md  util.py
discrete/article/: Discrete_Geometric_Equation.md  readme.md
discrete/article/figures/: test_figures.py
discrete/jax/: field.py  field_slice.py
discrete/jax/test/: test_eigen.py  test_elastic.py  test_leapfrog.py
discrete/loopy/: context.py  field.py  field_slice.py  field_sta.py  readme.md
discrete/loopy/test/: test_field.py  test_field_slice.py  test_field_sta.py
discrete/numpy/: field.py  field_slice.py  minimal.py  minimal_dual_t_wxy.py  minimal_t.py  minimal_xt.py  minimal_xt_full.py
discrete/numpy/minimal/: codegen.py  common.py  minimal_dual_t_wxy.py  minimal_dual_t_xy.py  minimal_t.py  minimal_wxyzt_even.py  minimal_wxyzt_odd.py  minimal_xwt_full.py  minimal_xyt_full_mass.py  minimal_xywt_even.py  minimal_xyzt_full_mass.py  vwxt_even.py  vwxyt_even.py  wxt_even.py  wxt_even_metric.py  wxt_full_mass-1.py  wxyt_bivector.py  wxyt_bivector_metric.py  wxyt_even.py  wxyt_even_mass-sps.py  wxyt_even_mass-sps_sig.py  wxyt_even_mass-wxy.py  wxyt_even_mass-wxy_sig.py  (+42 more)
discrete/opencl/: context.py  field.py  field_slice.py  readme.md
discrete/test/: test_field.py
(+4 files in other folders)
